final do exercício do modulo 7

--- a/Dev Full Stack Python/Módulo 07 - Integrando HTML com JavaScript/Aula 4 - Eventos/index.html
+++ b/Dev Full Stack Python/Módulo 07 - Integrando HTML com JavaScript/Aula 4 - Eventos/index.html
@@ -12,12 +12,12 @@
     <div>
         <h1>Meu Formulário</h1>
         <form action="" id="formDeposito">
-            <input type="text" name="nome" id="nome" placeholder="Nome completo"><br>
+            <input type="text" name="nome" id="nome" required placeholder="Nome completo"><br>
             <p id="incorreto">O nome digitado está incorreto.</p>
 
-            <input type="number" name="numeroDaConta" id="numeroDaConta" placeholder="Número da conta"><br>
+            <input type="number" name="numeroDaConta" id="numeroDaConta" required placeholder="Número da conta"><br>
 
-            <input type="number" name="valor" id="valor" placeholder="Valor"><br>
+            <input type="number" name="valor" id="valor" required placeholder="Valor"><br>
 
             <textarea name="descricao" id="descricao" cols="30" rows="10" placeholder="Descrição (opcional)"></textarea><br>
 
