--- a/Exercicios/exercio modulo 7/exercicio_html_js.html
+++ b/Exercicios/exercio modulo 7/exercicio_html_js.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Validação de Formulário</h1>
     <form id="form">
-        <input type="number" name="campoA" id="campoA" placeholder="Campo A"><br>
+        <input type="number" name="campoA" id="campoA" placeholder="Campo A" required><br>
 
-        <input type="number" name="campoB" id="campoB" placeholder="Campo B"><br>
+        <input type="number" name="campoB" id="campoB" placeholder="Campo B" required><br>
 
         <button type="submit">Enviar</button>
     </form>
