Final do exercício do modulo 8

--- a/Dev Full Stack Python/Módulo 08 - Projeto 02/index.html
+++ b/Dev Full Stack Python/Módulo 08 - Projeto 02/index.html
@@ -29,24 +29,20 @@
                 <thead>
                     <tr>
                         <th>Nome da atividade</th>
-                        <th>nota</th>
-                        <th>Adicionar +</th>
+                        <th>Nota</th>
+                        <th>Resultado</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Atividade</td>
-                        <td>8</td>
-                        <td><img src="images/aprovado.png" alt="aprovado" height="24px"></td>
-                    </tr>
+                    
                 </tbody>
 
                 <tfoot>
                     <tr>
                         <td>Média</td>
-                        <td>---</td>
-                        <td class="reprovado aprovado">---</td>
+                        <td id="valorMediaFinal">---</td>
+                        <td><span  class="reprovado aprovado">---</span></td>
                     </tr>
                 </tfoot>
             </table>
