--- a/Dev Full Stack Python/Módulo 20 - Construa email com html/index.html
+++ b/Dev Full Stack Python/Módulo 20 - Construa email com html/index.html
@@ -12,7 +12,7 @@
             <thead>
                 <tr>
                     <th align="left" style="padding-top: 32px; padding-bottom: 32px; font-size: 32px; font-family: sans-serif;">
-                        Ebac Blog
+                        Ebac <span style="color: #4C9155;">Blog</span>
                     </th>
                 </tr>
             </thead>
@@ -25,25 +25,45 @@
                 <tr>
                     <td>
                         <p style="font-family: sans-serif; border: 2px solid #4C9155; padding: 8px 0 8px 40px;">Paixão nos gramados: As maiores rivalidades do futebol.</p>
-                        <p style="padding-left: 40px;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <time style="padding-left: 40px;">Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                        <div style="display: grid; grid-template-columns: 30% 65%; column-gap: 5%;">
+                            <div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-WMBkuAHykd8OPS_Xppzsu77u3xn3AGwUzg&usqp=CAU" alt="um campo de futebol" style="width: 100%;">
+                            </div>
+                            <div>
+                                <p>No vasto universo do futebol, algumas rivalidades transcenderam as linhas do campo e se tornaram verdadeiras paixões que inflamam corações de torcedores ao redor do mundo...</p>
+                                <time>Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <p style="font-family: sans-serif; border: 2px solid #4C9155; padding: 8px 0 8px 40px;">Craques do passado e do presente: Histórias inspiradoras.</p>
-                        <p style="padding-left: 40px;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <time style="padding-left: 40px;">Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                        <div style="display: grid; grid-template-columns: 30% 65%; column-gap: 5%;">
+                            <div>
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTbNwjNO87W7_9gl4gISjuVavPMBG7ngqyp-6DXQIxw0_PdaRCqKVDCqcoavltNPbotLRc&usqp=CAU" alt="imagem do pele sorrindo" style="width: 100%;">
+                            </div>
+                            <div>
+                                <p>No panteão do futebol, há histórias inspiradoras de craques do passado e do presente que transcendem a mera habilidade no campo, revelando determinação, superação e paixão pelo jogo...</p>
+                                <time>Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                            </div>
+                        </div>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <p style="font-family: sans-serif; border: 2px solid #4C9155; padding: 8px 0 8px 40px;">Estratégias vencedoras: Os segredos táticos por trás do grandes times.</p>
-                        <p style="padding-left: 40px;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <time style="padding-left: 40px;">Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                        <div style="display: grid; grid-template-columns: 30% 65%; column-gap: 5%;">
+                            <div>
+                                <img src="https://images.impresa.pt/sicnot/2023-08-22-Pep-Guardiola-7fff2baf/original/mw-720" alt="um campo de futebol" style="width: 100%;">
+                            </div>
+                            <div>
+                                <p>Os grandes times de futebol não são feitos apenas de jogadores habilidosos, mas também de estratégias táticas meticulosamente planejadas e executadas...</p>
+                                <time>Postado em <span style="color: #4C9155; font-weight: bold;">28/10/2023</span></time>
+                            </div>
+                        </div>
                     </td>
-                </tr>
-                
+                </tr>                
             </tbody>
         </table>
     </center>
