conclusão da parte hero.

--- a/Dev Full Stack Python/Módulo 21 - Projeto 4/index.html
+++ b/Dev Full Stack Python/Módulo 21 - Projeto 4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,36 @@
     <link rel="stylesheet" href="destino/css/main.css">
 </head>
 <body>
-    <header>
+    <header class="hero">
+        <section class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="destino/images/disneyplus.svg" alt="Disney+">
+            </h1>
 
+            <h3 class="title--small">
+                As melhores histórias em um só lugar.
+            </h3>
+
+            <p>
+                <a href="#" class="link-text">Assinar o Disney+</a><br>
+                <span class="text">R$ 27,90/mês ou R$ 279,90/ano á vista*</span>
+            </p>
+
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="destino/images/logos/disney_star_plus.png" alt="Combo Star Play">
+                    <button type="button">Assine agora</button>
+                    <span class="text">R$45,90/mês*</span>
+                </li>
+                <li class="hero__content__combos__combo">
+                    <img src="destino/images/logos/disney_star_plus_starzplay.png" alt="Combo Star Play">
+                    <button type="button">Assine agora</button>
+                    <span class="text">R$55,90/mês*</span>
+                </li>
+            </ul>
+
+            <p class="text--small">*O preço pode variar caso a assinatura seja feita através de outras plataformas.</p>
+        </section>
     </header>
     
 </body>
