final do projeto

--- a/Dev Full Stack Python/Módulo 22 - Landing Page/src/index.html
+++ b/Dev Full Stack Python/Módulo 22 - Landing Page/src/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="container">
             <img src="images/ebac_logo.svg" alt="Ebac Logo" class="header__logo">
-            <p class="header__text">O maior evento de tecnologia do Brasil começa em 10d 20h 30m 15s</p>
+            <p class="header__text">O maior evento de tecnologia do Brasil começa em <span id="contador"></span></p>
 
             <div class="header__info">
                 <ul class="header__info__list">
